[package]
name = "script_servoparser"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
publish = false


[lib]
name = "script_servoparser"
path = "lib.rs"

[dependencies]
script = {path = "../script"}
html5ever = "0.22"
dom_struct = {path = "../dom_struct"}
embedder_traits = {path = "../embedder_traits"}
hyper = "0.10"
msg = {path = "../msg"}
net_traits = {path = "../net_traits"}
profile_traits = {path = "../profile_traits"}
script_traits = {path = "../script_traits"}
servo_config = {path = "../config"}
servo_url = {path = "../url"}
style = {path = "../style", features = ["servo"]}
mozjs = { version = "0.6", features = ["promises"]}
hyper_serde = "0.8"
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { path = "../malloc_size_of_derive" }
domobject_derive = {path = "../domobject_derive"}